added link to final project videos

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -24,6 +24,16 @@ layout: archive
   All the written reports can be found in the <a href="{{ base_path }}/reports/">Reports</a> page. All reports are also listed below (most recent first) for ease of access.
 </p>
 
+<h1>Final Project Videos</h1>
+<ol>
+  <li>
+    <a href="https://youtu.be/BBFBKDZskBU"  target="_blank">Round 1</a>
+  </li>
+  <li>
+    <a href="https://youtu.be/WRoHsOZKESU" target="_blank">Round 2</a>
+  </li>
+</ol>
+
 <h1>Reports</h1>
 {% for report in site.reports reversed %}
   <a href="{{ base_path }}{{ report.permalink }}" rel="permalink">{{ report.title }}</a>
